--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "Lua.diagnostics.globals": ["love", "player", "background"]
+  "Lua.diagnostics.globals": ["love", "player", "background", "anim8"]
 }
